--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,21 +46,17 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Cache node modules
-        id: myCacheStep
         uses: actions/cache@v2
-        env:
-          cache-name: node-modules-cache
+        id: npm_cache_id
         with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          path: node_modules
+          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
+            ${{ runner.os }}-npm-cache-
             ${{ runner.os }}-
 
       - name: ⬇️  Install packages
-        if: steps.myCacheStep.outputs.cache-hit != 'true'
+        if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
       - name: 🧽 Lint all files
