test ONLY deploy workflow temporarily

--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -8,20 +8,20 @@ on:
 
 jobs:
 
-  test:
-    uses: ./.github/workflows/test.yml
+  # test:
+  #   uses: ./.github/workflows/test.yml
 
-  build:
-    needs: [test]
-    uses: ./.github/workflows/build.yml
-    secrets:
-      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-      DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO_DEV }}
+  # build:
+  #   needs: [test]
+  #   uses: ./.github/workflows/build.yml
+  #   secrets:
+  #     DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  #     DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+  #     DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO_DEV }}
 
   # TODO, remove this, just deploy for practice
   deploy:
-    needs: [build]
+    # needs: [build]
     uses: ./.github/workflows/deploy.yml
     secrets:
       EC2_REMOTE_HOST: ${{ secrets.EC2_REMOTE_HOST }}
