AWS EC2 deployment (#34)
* rename main workflow

* publish DEV docker image on branches

* create ssh docker EC2 deploy script

* save articles to resources

* write EC2 setup instructions

* add instructions for broken Docker container

* update docker image scripts for EC2

* update .env docker image reference

* test updated docker image build config

* ignore files to shrink docker image size

* tweak docker compose folder volumes

* modify build workflow for testing

* fix missing manifest.json error

* work on modifying the env config for builds

* tweak webpack .env configs

* use .env for production in action

* reference ENV_PRODUCTION repository secret in actions

* include env in image

* deploy dev docker image build

* document docker challenge

* ignore .env files for docker images

* fix docker image config

* fix react router with static files

* check docker image in CD workflow

* avoid static files return on /api requests

* node testing on ALL node versions

* remove .env files from workflows

* update EC2 setup commands

* update run script in github actions

* fix typo in test workflow

* remove broken curl command in workflow CD

* pass down secrects for EC2 deploy workflow

* create PR template

* properly cache modules in workflow

* rename npm cache in workflows

* new path for cached workflow node modules

* pass down EC2 secrets in workflow

* workflow secrets reference typo

* docker run command in deploy workflow

* test ONLY deploy workflow temporarily

* limit deploy workflow steps to debug

* restrat docker in workflow deplyoment

* test sample script in EC2 connection

* test deploy action without passphrase

* attempt different port for ssh

* uncomment full EC2 deploy workflow script

* avoid restarting docker daemon in workflow;

* stop containers from running in workflow

* force remove running container

* remove EC2 deployment for

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,18 +28,16 @@ jobs:
 
       - name: Cache node modules
         uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
+        id: npm_cache_id
         with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          path: node_modules
+          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
+            ${{ runner.os }}-npm-cache-
             ${{ runner.os }}-
 
       - name: ⬇️  Install packages
+        if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
       - name: 🏗 Build client files
@@ -51,17 +49,25 @@ jobs:
     needs: [build-node]
     runs-on: ubuntu-latest
 
-    name: Docker Build/Publish
+    name: Docker Image Build + Publish
     steps:
       - name: ♻️ Check out Git Repository
         uses: actions/checkout@v2
         with:
           persist-credentials: false
 
-      - name: Create placeholder env file
-        run: touch .env.production
+      - name: Cache node modules
+        uses: actions/cache@v2
+        id: npm_cache_id
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-cache-
+            ${{ runner.os }}-
 
       - name: ⬇️  Install packages
+        if: steps.npm_cache_id.outputs.cache-hit != 'true'
         run: npm install
 
       - name: 🔖 Set up Node
@@ -88,3 +94,38 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_REPO }}:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_REPO }}:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_REPO }}:buildcache,mode=max
+
+  check-docker:
+    needs: [build-docker]
+    runs-on: ubuntu-latest
+    # services:
+    #   woofer-build:
+    #     image: ${{ secrects.DOCKER_HUB_REPO }}
+    #     ports:
+    #        - 3000:3000
+
+    name: Verify Docker Image Runs
+    steps:
+      - name: ♻️ Check out Git Repository
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+
+      - name: Pull Docker Image
+        run: |
+          docker pull ${{ secrets.DOCKER_HUB_REPO }}:latest
+
+      - name: Run Docker Container
+        run: |
+          docker run \
+            -d \
+            --rm \
+            -p 3000:3000 \
+            --env-file ./.env.sample \
+            --name woofer \
+            -t spencerlepine/woofer:latest
+
+      # curl command fails
+      # - name: Should be running on localhost
+      #   run: |
+      #     curl http://localhost:3000
