--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,13 @@ version: '3.9'
 services:
   server:
     build:
-      context: .
+      context: ./
       dockerfile: Dockerfile
     image: woofer
     container_name: woofer-app
     command: npm run start
+    env_file:
+      - ./.env
     ports:
       - "3000:3000"
     depends_on:
@@ -22,29 +24,12 @@ services:
       - "27017:27017"
     networks:
       - app-network
-  # client:
-  #   build:
-  #     context: ./client
-  #     dockerfile: Dockerfile
-  #   image: woofer-client
-  #   container_name: woofer-react-client
-  #   command: npm run start
-  #   volumes:
-  #     - ./client/:/usr/app
-  #     - /usr/app/node_modules
-  #   depends_on:
-  #     - server
-  #   ports:
-  #     - "3000:3000"
-  #   networks:
-  #     - app-network
 
 networks:
     app-network:
         driver: bridge
 
 volumes:
-    data-volume:
-    node_modules:
-    web-root:
-      driver: local
+  data-volume:
+  web-root:
+    driver: local
