remove duplicate docker rm command in workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,9 +53,9 @@ jobs:
             docker container ls
 
             # systemctl restart docker
-            docker ps -a | grep "${{ secrets.DOCKER_CONTAINER_NAME }}" | awk '{print $1}' | xargs docker rm -f
+            # docker ps -a | grep "${{ secrets.DOCKER_CONTAINER_NAME }}" | awk '{print $1}' | xargs docker rm -f
 
-            echo "Starting the new docker image"
+            echo -e "$GREEN Starting new Docker container $NC"
             docker run \
               -d \
               --rm \
