--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,20 @@
 version: '3.9'
 
 services:
-  backend:
+  nodeserver:
     build:
         context: ./
         dockerfile: Dockerfile
+    ports:
+        - 3000:3000
     volumes:
         - /app/node_modules
         - ./:/app
     restart: always
 
-  frontend:
-    build:
-        context: ./
-        dockerfile: Dockerfile
-    volumes:
-        - /app/node_modules
-        - ./:/app
-
   nginx:
     build:
-        context: ./
+        context: ./nginx
         dockerfile: Dockerfile
     ports:
         - 3000:80
