--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -1,57 +1,27 @@
-#The Nginx server instance
-# server{
-#     listen 80;
-#     server_name wach.quest;
-#     location / {
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header Host $host;
-#         proxy_pass http://127.0.0.1:3000;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection "upgrade";
-#         # location /overview {
-#         #     proxy_pass http://127.0.0.1:3000$request_uri;
-#         #     proxy_redirect off;
-#         # }
-#     }
-# }
-
-# ----------------------
-
 server {
-  listen 80;
+    # this server listens on port 80
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
-  location / {
-      proxy_pass http://127.0.0.1:3000;
-  }
+    # name this server "nodeserver", but we can call it whatever we like
+    # server_name nodeserver;
+
+    # the location / means that when we visit the root url (localhost:80/), we use this configuration
+    location / {
+            # a bunch of boilerplate proxy configuration
+            proxy_http_version 1.1;
+            proxy_cache_bypass $http_upgrade;
+
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # proxy_read_timeout 5m;
+
+            # the real magic is here where we forward requests to the address that the Node.js server is running on
+            proxy_pass http://nodeserver:3000;
+    }
 }
-
-# ----------------------
-
-# upstream client {
-#   server client:3000;
-# }
-
-# upstream api {
-#   server api:5000;
-# }
-
-# server {
-#   listen 80;
-
-#   location / {
-#       proxy_pass http://client;
-#   }
-
-#   location /sockjs-node {
-#       proxy_pass http://client;
-#       proxy_http_version 1.1;
-#       proxy_set_header Upgrade $http_upgrade;
-#       proxy_set_header Connection "Upgrade";
-#   }
-
-#   location /api {
-#       rewrite /api/(.*) /$1 break;
-#       proxy_pass http://api;
-#   }
-# }
