branch check worklow yml typo

--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -21,7 +21,7 @@ jobs:
 
   # temporary
   deploy:
-    needs: [build]
+    # needs: [build]
     uses: ./.github/workflows/deploy.yml
     secrets:
       EC2_REMOTE_HOST: ${{ secrets.EC2_REMOTE_HOST }}
