--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
+          # file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKER_HUB_REPO }}:latest
@@ -117,7 +118,7 @@ jobs:
             -p 80:80 \
             --env-file ./.env.sample \
             --name woofer \
-            -t ${{ secrets.DOCKER_HUB_REPO }}:latest
+            -t "${{ secrets.DOCKER_HUB_REPO }}:latest"
 
       curl command fails
       - name: Should be running on localhost
