--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -11,17 +11,17 @@ jobs:
   # test:
   #   uses: ./.github/workflows/test.yml
 
-  # build:
-  #   needs: [test]
-  #   uses: ./.github/workflows/build.yml
-  #   secrets:
-  #     DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-  #     DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
-  #     DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO_DEV }}
+  build:
+    # needs: [test]
+    uses: ./.github/workflows/build.yml
+    secrets:
+      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO_DEV }}
 
   # temporary
   deploy:
-    # needs: [build]
+    needs: [build]
     uses: ./.github/workflows/deploy.yml
     secrets:
       EC2_REMOTE_HOST: ${{ secrets.EC2_REMOTE_HOST }}
