--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ on:
         required: true
       DOCKER_HUB_REPO:
         required: true
+      DOCKER_HUB_NGIX_REPO:
+        required: true
 
 jobs:
 
@@ -84,16 +86,27 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: 🐳 Publish to Docker Registry
+      - name: 🐳 Publish (Server) to Docker Registry
         uses: docker/build-push-action@v2
         with:
           context: ./
-          # file: ./Dockerfile
+          file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKER_HUB_REPO }}:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_REPO }}:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_REPO }}:buildcache,mode=max
+
+      - name: 🐳 Publish (nginx) to Docker Registry
+        uses: docker/build-push-action@v2
+        with:
+          context: ./nginx
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_NGIX_REPO }}:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_NGIX_REPO }}:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_NGIX_REPO }}:buildcache,mode=max
 
   check-docker:
     needs: [build-docker]
@@ -106,19 +119,23 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Pull Docker Image
+      - name: Run Docker build
         run: |
-          docker pull ${{ secrets.DOCKER_HUB_REPO }}:latest
+          docker-compose up --build -d
 
-      - name: Run Docker Container
-        run: |
-          docker run \
-            -d \
-            --rm \
-            -p 80:80 \
-            --env-file ./.env.sample \
-            --name woofer \
-            -t "${{ secrets.DOCKER_HUB_REPO }}:latest"
+      # - name: Pull Docker Image
+      #   run: |
+      #     docker pull ${{ secrets.DOCKER_HUB_REPO }}:latest
+
+      # - name: Run Docker Container
+      #   run: |
+      #     docker run \
+      #       -d \
+      #       --rm \
+      #       -p 80:80 \
+      #       --env-file ./.env.sample \
+      #       --name woofer \
+      #       -t "${{ secrets.DOCKER_HUB_REPO }}:latest"
 
       - name: Should be running on localhost
         run: |
