--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,6 @@ on:
         required: true
       DOCKER_HUB_REPO:
         required: true
-      DOCKER_HUB_NGIX_REPO:
-        required: true
 
 jobs:
 
@@ -86,7 +84,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: 🐳 Publish (Server) to Docker Registry
+      - name: 🐳 Publish to Docker Registry
         uses: docker/build-push-action@v2
         with:
           context: ./
@@ -96,17 +94,6 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_REPO }}:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_REPO }}:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_REPO }}:buildcache,mode=max
-
-      - name: 🐳 Publish (nginx) to Docker Registry
-        uses: docker/build-push-action@v2
-        with:
-          context: ./nginx
-          file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_NGIX_REPO }}:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_NGIX_REPO }}:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_NGIX_REPO }}:buildcache,mode=max
 
   check-docker:
     needs: [build-docker]
@@ -139,4 +126,4 @@ jobs:
 
       - name: Should be running on localhost
         run: |
-          curl http://localhost:80
+          curl http://localhost:3000
