--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,17 @@ env:
 
 on:
   workflow_call:
+    secrets:
+      FOLDER:
+        required: true
 
 jobs:
 
   test:
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        working-directory: ./${{ secrets.FOLDER }}
     strategy:
       fail-fast: false
       matrix:
