create seperate .env files for client/server

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,7 +8,7 @@ ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package*.json ./
 
 # Installs all node packages
-RUN npm install --silent
+RUN npm install
 
 COPY . ./
 
