--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
 
   client:
     build:
-      context: ./
-      dockerfile: ./client/Dockerfile
+      context: ./client
+      dockerfile: Dockerfile
     image: spencerlepine/mern-ec2-client
     restart: always
     env_file:
-      - ./.env
+      - ./client/.env
     ports:
       - "80:80"
     volumes:
@@ -26,13 +26,13 @@ services:
 
   backend:
     build:
-      context: ./
-      dockerfile: ./server/Dockerfile
+      context: ./server
+      dockerfile: Dockerfile
     image: spencerlepine/mern-ec2-server
     restart: always
     container_name: 'backend'
     env_file:
-      - ./.env
+      - ./server/.env
     ports:
       - "5000:5000"
     volumes:
