--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     defaults:
       run:
-        working-directory: ./${{ secrets.SUB_FOLDER }}
+        working-directory: "./${{ secrets.SUB_FOLDER }}"
     strategy:
       fail-fast: false
       matrix:
