--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,14 @@ jobs:
 
   test-client:
     uses: ./.github/workflows/test.yml
-    with:
-      SUB_FOLDER: "./server"
+    secrets:
+      SUB_FOLDER: ${{ secrets.SUB_FOLDER_CLIENT }}
 
   test-server:
     needs: [test-client]
     uses: ./.github/workflows/test.yml
-    with:
-      SUB_FOLDER: "./server"
+    secrets:
+      SUB_FOLDER: ${{ secrets.SUB_FOLDER_SERVER }}
 
   build:
     needs: [test-server]
