--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -11,13 +11,13 @@ jobs:
   test-client:
     uses: ./.github/workflows/test.yml
     secrets:
-      SUB_FOLDER: ${{ secrets.SUB_FOLDER_CLIENT }}
+      SUB_FOLDER: "./${{ secrets.SUB_FOLDER_CLIENT }}"
 
   test-server:
     needs: [test-client]
     uses: ./.github/workflows/test.yml
     secrets:
-      SUB_FOLDER: ${{ secrets.SUB_FOLDER_SERVER }}
+      SUB_FOLDER: "./${{ secrets.SUB_FOLDER_SERVER }}"
 
   build:
     needs: [test-server]
